# vidaio-subnet

./: .env.template  .gitignore  COMPETITIVE_CONFIG.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  PACKAGE_SUMMARY.md  README.md  benchmark_compression.py  bootstrap.sh  check_queues.py  config.yaml  docker-compose-vali.yml  docker-compose.yml  incentive_mechanism_summary.md  miner_monitor.py  output.hevc  output.txt  pyproject.toml  requirements.txt  run.sh  run_test.sh  scoring_simulator.py  scraper.py  search_config.yaml  setup.py  setup_vidaio_validator.sh  start_miner.sh  start_test.sh  stop_test.sh  test.py  ut-fmt  vmaf_output.xml
chutes/: schemas.py
docker/: .env.example  Dockerfile  Dockerfile.miner  Dockerfile.miner-tee  README.md  deploy.sh  docker-compose-miner-tee.yml  docker-compose-vali.yml  docker-compose-video_utils_test.yml  docker-compose-youtube_requests_test.yml  docker-compose.miner.yml  entrypoint.sh  healthcheck.sh  monitor.sh
docs/: FFMPEG_REBUILD_GUIDE.md  TEE_MINER_SETUP.md  chutes_miner_setup.md  competition_mode_implementation_plan.md  competition_phase0_feasibility_report.md  competition_phase4_dataset_runbook.md  competitions.md  incentive_mechanism.md  miner.md  miner_competition_checklist.md  miner_setup.md  validator_competition_checklist.md  validator_setup.md  video_compressibility_gpu_optimised.md  video_compressibility_research.md  video_upscaling_gpu_optimised.md  video_upscaling_robustness_research.md
features/: requirements.txt
features/hashmatcher/: .gitignore  CMakeLists.txt  README.md  matcher.cpp
gramine/: Makefile  miner.manifest.template
miner/: .env.template  README.md  common_preflight.py  competition_sdk.py  docker-compose.yml  export_compose.py  modal_workers.py  requirements.txt  seam_check.sh
neurons/: miner.py  miner_tee.py  validator.py
prototype/: README.md  architecture.md  malicious_miner_poc.py  miner_axon.py  miner_chute.py  setup.md  validator_chute.py  validator_orchestrator.py
scripts/: capture_video_frames.py  check_queues.py  clip_video.py  competition_dataset.py  competition_modal_build.py  competition_modal_phase0_probe.py  competition_phase0.py  competition_preflight.py  competition_repair.py  competition_review.py  deploy_chute.py  get_video_lengths.py  test_chute_local.py  video_info_cap.py
search/: README.md  requirements.txt  video_search_engine.py  videodb_update_service.py
tests/: __init__.py  test_compression_artifact_cleanup.py  test_compression_score_cache.py  test_pieapp_metric.py  test_video_utils.py  test_vmaf_metric.py  test_yaml_loader.py
vidaio_subnet_core/: __init__.py  global_config.py  protocol.py
video_scheduler/: chunk_logic.py  config.yaml  main.py  redis_utils.py  requirements.txt  worker.py
video_subnet_core/: __init__.py  global_config.py  protocol.py
(+270 files in other folders)
