[project]
name = "decentralized-video-processing"
version = "0.1.0"
description = "A decentralized system for video processing leveraging Bittensor ecosystem."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"  # Add license information
authors = [
    { name = "Arnold", email = "" } 
]
keywords = ["decentralized", "video processing", "bittensor"]  
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]  

dependencies = [
    "fastapi",
    "pydantic",
    "numpy",
    "minio",
    "opencv-python",
    "loguru",
    "bittensor==9.0.0",
    "redis",
    "sqlalchemy",
    "pandas",
    "httpx",
    "pydantic-settings",
    "firerequests",
    "tqdm",
    "moviepy==1.0.3",
    "python-dotenv",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
